syntax = "proto3";
package io.products.centralProduct.action;

option java_outer_classname = "CentralProductActionApi";

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service CentralProductAction {
    option (kalix.codegen) = {
      action: {}
    };
  
    rpc CreateCentralProduct(CentralProduct) returns (google.protobuf.Empty)  {
      option (google.api.http) = {
          post: "/create_central_product_impl"
          body: "*"
      };
    }

    // rpc UpdateCentralProduct(CentralProductApi.CentralProduct) returns (CentralProduct) {
    //   option (google.api.http) = {
    //       put: "/central_product/{id}"
    //       body: "*"
    //   };
    // }

    // rpc DeleteCentralProduct(CentralProductApi.CentralProduct) returns (CentralProduct) {
    //   option (google.api.http) = {
    //       put: "/central_product/{id}/delete"
    //       body: "*"
    //   };
    // }

    // rpc OnDeleteState (google.protobuf.Empty) returns (google.protobuf.Empty) {
    //   option (kalix.method).eventing.in = {
    //     value_entity: "central_products"
    //     handle_deletes: true // <4>
    //   };
    // }

}


message CentralProduct {
  repeated CentralAttribute centralAttributes = 1;
  repeated VariantGroup variantGroups = 2;
  repeated OptionGroup optionGroups = 3;
}


message CentralAttribute {  
  string attrId = 1;
  string cntrlAttrName = 2;
  string cntrlAttrValue = 3;
  string cntrlAttrType = 4;
  bool isCommon = 5;

}


message VariantGroup {
  repeated CentralVariant centralVariant = 1;
}

message CentralVariant {
  string vrntId = 1;
  string cntrlVrntName = 2;
  string cntrlVrntValue = 3;
  string cntrlVrntType = 4;
}

message OptionGroup {
  repeated CentralOption centralOption = 1;
}


message CentralOption {
  string optnId = 1;
  string cntrlOptnName = 2;
  string cntrlOptnValue = 3;
  string cntrlOptnType = 4;
}